# file_trash_tester

./: README.md  meson.build
.github/workflows/: main.yml
src/: main.c  trash.c  trash.h  trash_item.c  trash_item.h  trash_store.c  trash_store.h  utils.c  utils.h
